# stan-perf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/eigen_multi_index/: CMakeLists.txt  README.md  eigen_dbl.cpp  index_dbl.cpp  index_var.cpp  loop_dbl.cpp  loop_var.cpp  nocheck_index_dbl.cpp
benchmarks/eigen_multi_index/scripts/: plot.R
benchmarks/matmul_aos_soa/: CMakeLists.txt  aos.cpp  setup.hpp  soa.cpp
benchmarks/move_stuff/: CMakeLists.txt  move_ex.cpp  readme.md
benchmarks/oscode/: CMakeLists.txt  burst.cpp  burst_dense.cpp  burst_orig.cpp  burst_orig_dense.cpp  readme.md
benchmarks/utils/: setup.hpp
benchmarks/varmat_multi_assign/: CMakeLists.txt  README.md  hashmap.hpp  matvar.cpp  setup.hpp  varmat_custom_map.cpp  varmat_map.cpp  varmat_set.cpp
scripts/matmul_aos_soa/: plots.R
scripts/move_stuff/: plots.R
scripts/oscode/: plots.R
scripts/varmat_multi_assign/: plots.R
